fixed alignment and fixed github render if empty

--- a/frontend/src/components/profile/profile.css
+++ b/frontend/src/components/profile/profile.css
@@ -44,6 +44,8 @@
     justify-content: center;
     align-items: center;
     row-gap: 5px;
+    align-content: center;
+    /* border: 1px solid black; */
    
 }
 
